--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,65 @@
 * text=auto !eol
+freeglut/freeglut/AUTHORS svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/COPYING svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/ChangeLog svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/INSTALL svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/NEWS svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/README svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/TODO svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/acconfig.h svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/aclocal.m4 svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/configure svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/configure.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_display.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_font.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_font_data.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_gamemode.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_geometry.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_init.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_joystick.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_main.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_menu.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_misc.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_overlay.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_state.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_structure.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_window.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/templates/cpp_template svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/templates/header_template svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut.dsw svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut.kdevprj svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut13.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut13.plg svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/.deps/genfonts.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/.deps/genstroke.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/Makefile svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/Makefile.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/Roman.src svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/Roman_M.src svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/genfonts.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/genstroke.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/GL/Makefile svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/GL/Makefile.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/GL/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/Makefile svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/Makefile.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/install-sh svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/mkinstalldirs svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/stamp-h svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/stamp-h.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/tests/.deps/one.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/tests/Makefile svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/tests/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/tests/Makefile.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/tests/one.c svn_keywords=Author+Date+Id+Revision
