--- a/.gitattributes
+++ b/.gitattributes
@@ -11,7 +11,27 @@ freeglut/acconfig.h svn_keywords=Author+Date+Id+Revision
 freeglut/aclocal.m4 svn_keywords=Author+Date+Id+Revision
 freeglut/configure svn_keywords=Author+Date+Id+Revision
 freeglut/configure.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_callbacks.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_cursor.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_display.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_font.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_font_data.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_gamemode.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_geometry.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_init.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_joystick.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_main.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_menu.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_misc.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_overlay.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_state.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_structure.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_teapot.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_videoresize.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/.deps/freeglut_window.P svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/Makefile svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/Makefile.in svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_display.c svn_keywords=Author+Date+Id+Revision
