--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,13 @@ freeglut/freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/acconfig.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/aclocal.m4 svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/configure.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/doc/freeglut.html svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/doc/freeglut_logo.png -text
+freeglut/freeglut/doc/index.html svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/doc/ogl_sm.png -text
+freeglut/freeglut/doc/progress.html svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/doc/structure.html svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/.deps/freeglut_callbacks.P svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/.deps/freeglut_cursor.P svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/.deps/freeglut_display.P svn_keywords=Author+Date+Id+Revision
