--- a/.gitattributes
+++ b/.gitattributes
@@ -34,6 +34,8 @@ freeglut/freeglut/freeglut-1.3/freeglut_menu.c svn_keywords=Author+Date+Id+Revis
 freeglut/freeglut/freeglut-1.3/freeglut_misc.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_overlay.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_state.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_stroke_mono_roman.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_stroke_roman.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_structure.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
@@ -50,6 +52,9 @@ freeglut/freeglut/genfonts/Roman.src svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/genfonts/Roman_M.src svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/genfonts/genfonts.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/genfonts/genstroke.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/lex.l svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/to_stroke.y svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/genfonts/wfont.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
