Added stroke fonts.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@25 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -34,6 +34,8 @@ freeglut/freeglut-1.3/freeglut_menu.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_misc.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_overlay.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_state.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/freeglut_stroke_mono_roman.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/freeglut_stroke_roman.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_structure.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
@@ -50,6 +52,9 @@ freeglut/genfonts/Roman.src svn_keywords=Author+Date+Id+Revision
 freeglut/genfonts/Roman_M.src svn_keywords=Author+Date+Id+Revision
 freeglut/genfonts/genfonts.c svn_keywords=Author+Date+Id+Revision
 freeglut/genfonts/genstroke.c svn_keywords=Author+Date+Id+Revision
+freeglut/genfonts/lex.l svn_keywords=Author+Date+Id+Revision
+freeglut/genfonts/to_stroke.y svn_keywords=Author+Date+Id+Revision
+freeglut/genfonts/wfont.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
