Added on behalf of John Fay.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@29 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@ freeglut/configure.in svn_keywords=Author+Date+Id+Revision
 freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/freeglut.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/freeglut_logo.png -text
+freeglut/doc/freeglut_user_interface.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/index.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/ogl_sm.png -text
 freeglut/doc/progress.html svn_keywords=Author+Date+Id+Revision
