--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@ freeglut/freeglut/configure.in svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/freeglut.html svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/freeglut_logo.png -text
+freeglut/freeglut/doc/freeglut_user_interface.html svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/index.html svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/ogl_sm.png -text
 freeglut/freeglut/doc/progress.html svn_keywords=Author+Date+Id+Revision
