--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,7 @@ freeglut/freeglut-1.3/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revisio
 freeglut/freeglut-1.3/freeglut_window.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/templates/header_template svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.dsw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.kdevprj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
