--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,7 @@ freeglut/freeglut.kdevprj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut13.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut13.plg svn_keywords=Author+Date+Id+Revision
+freeglut/freeglutstatic.dsw svn_keywords=Author+Date+Id+Revision
 freeglut/genfonts/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/genfonts/Roman.src svn_keywords=Author+Date+Id+Revision
 freeglut/genfonts/Roman_M.src svn_keywords=Author+Date+Id+Revision
