Allow DLL and static library build on Windows.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@42 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,7 @@ freeglut/freeglut/freeglut.kdevprj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut13.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut13.plg svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglutdll.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglutstatic.dsw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/genfonts/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/genfonts/Roman.src svn_keywords=Author+Date+Id+Revision
