--- a/.gitattributes
+++ b/.gitattributes
@@ -41,6 +41,7 @@ freeglut/freeglut-1.3/freeglut_structure.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_window.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/freeglutdll.def svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/templates/header_template svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.dsp svn_keywords=Author+Date+Id+Revision
