--- a/.gitattributes
+++ b/.gitattributes
@@ -62,7 +62,9 @@ freeglut/genfonts/to_stroke.y svn_keywords=Author+Date+Id+Revision
 freeglut/genfonts/wfont.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
+freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
+freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/install-sh svn_keywords=Author+Date+Id+Revision
 freeglut/mkinstalldirs svn_keywords=Author+Date+Id+Revision
