Broke freeglut.h into glut.h and freeglut_ext.h
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@45 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -62,7 +62,9 @@ freeglut/freeglut/genfonts/to_stroke.y svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/genfonts/wfont.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/install-sh svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/mkinstalldirs svn_keywords=Author+Date+Id+Revision
