Moved freeglut_internal.h to the private directory with the other freeglut sources.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@46 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -29,6 +29,7 @@ freeglut/freeglut-1.3/freeglut_font_data.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_gamemode.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_geometry.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_init.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut-1.3/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_joystick.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_main.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut-1.3/freeglut_menu.c svn_keywords=Author+Date+Id+Revision
@@ -63,7 +64,6 @@ freeglut/genfonts/wfont.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
-freeglut/include/GL/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/install-sh svn_keywords=Author+Date+Id+Revision
