--- a/.gitattributes
+++ b/.gitattributes
@@ -29,6 +29,7 @@ freeglut/freeglut/freeglut-1.3/freeglut_font_data.c svn_keywords=Author+Date+Id+
 freeglut/freeglut/freeglut-1.3/freeglut_gamemode.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_geometry.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_init.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/freeglut-1.3/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_joystick.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_main.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/freeglut-1.3/freeglut_menu.c svn_keywords=Author+Date+Id+Revision
@@ -63,7 +64,6 @@ freeglut/freeglut/genfonts/wfont.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/include/GL/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/install-sh svn_keywords=Author+Date+Id+Revision
