Initial version of autogen.sh, tested here and creates the correct files
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@90 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ freeglut/freeglut/README svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/acconfig.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/aclocal.m4 svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/autogen.sh svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/configure.in svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/freeglut.html svn_keywords=Author+Date+Id+Revision
