--- a/.gitattributes
+++ b/.gitattributes
@@ -71,6 +71,12 @@ freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/install-sh svn_keywords=Author+Date+Id+Revision
 freeglut/mkinstalldirs svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals/Fractals.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals/fractals.c svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals/fractals.dat svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals_random/Fractals_random.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
 freeglut/stamp-h svn_keywords=Author+Date+Id+Revision
 freeglut/stamp-h.in svn_keywords=Author+Date+Id+Revision
 freeglut/tests/Makefile.am svn_keywords=Author+Date+Id+Revision
