--- a/.gitattributes
+++ b/.gitattributes
@@ -77,6 +77,32 @@ freeglut/freeglut/progs/demos/Fractals/fractals.dat svn_keywords=Author+Date+Id+
 freeglut/freeglut/progs/demos/Fractals_random/Fractals_random.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_display.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_ext.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_font.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_font_data.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_gamemode.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_geometry.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_init.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_joystick.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_main.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_menu.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_misc.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_overlay.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_state.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_stroke_mono_roman.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_stroke_roman.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_structure.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_window.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglutdll.def svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/templates/cpp_template svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/templates/header_template svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/stamp-h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/stamp-h.in svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/tests/Makefile.am svn_keywords=Author+Date+Id+Revision
