--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,7 @@ freeglut/freeglut-1.3/templates/cpp_template svn_keywords=Author+Date+Id+Revisio
 freeglut/freeglut-1.3/templates/header_template svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.dsw svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut.kdevelop svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.kdevprj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut13.dsp svn_keywords=Author+Date+Id+Revision
