--- a/.gitattributes
+++ b/.gitattributes
@@ -77,6 +77,8 @@ freeglut/freeglut/progs/demos/Fractals/fractals.dat svn_keywords=Author+Date+Id+
 freeglut/freeglut/progs/demos/Fractals_random/Fractals_random.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/Lorenz/lorenz.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
