--- a/.gitattributes
+++ b/.gitattributes
@@ -71,6 +71,8 @@ freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Re
 freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
@@ -99,5 +101,3 @@ freeglut/src/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/src/templates/header_template svn_keywords=Author+Date+Id+Revision
 freeglut/stamp-h svn_keywords=Author+Date+Id+Revision
 freeglut/stamp-h.in svn_keywords=Author+Date+Id+Revision
-freeglut/tests/Makefile.am svn_keywords=Author+Date+Id+Revision
-freeglut/tests/one.c svn_keywords=Author+Date+Id+Revision
