Initial project file from John Fay
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@127 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -73,6 +73,7 @@ freeglut/freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revisi
 freeglut/freeglut/progs/demos/Lorenz/lorenz.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
