changes for make dist
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@134 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/acconfig.h svn_keywords=Author+Date+Id+Revision
 freeglut/autogen.sh svn_keywords=Author+Date+Id+Revision
 freeglut/configure.in svn_keywords=Author+Date+Id+Revision
+freeglut/doc/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/freeglut.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/freeglut_logo.png -text
@@ -62,14 +63,19 @@ freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/install-sh svn_keywords=Author+Date+Id+Revision
 freeglut/mkinstalldirs svn_keywords=Author+Date+Id+Revision
+freeglut/progs/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/Fractals.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/fractals.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/Fractals_random.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals_random/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Lorenz/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
