--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ freeglut/freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/acconfig.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/autogen.sh svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/configure.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/doc/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/freeglut.html svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/freeglut_logo.png -text
@@ -62,14 +63,19 @@ freeglut/freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/install-sh svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/mkinstalldirs svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals/Fractals.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/Fractals/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals/fractals.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals_random/Fractals_random.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/Fractals_random/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/Lorenz/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Lorenz/lorenz.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
