This should put an end to the font binary compatibility issue.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@146 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -88,6 +88,7 @@ freeglut/freeglut/src/freeglut_font.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_font_data.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_gamemode.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_geometry.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_glutfont_definitions.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_init.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_joystick.c svn_keywords=Author+Date+Id+Revision
