Menus' decorations are removed on Linux. Not sure if we want the mwmborder.c a separate file or not; doing it separate for right now. Makefile was not updated, since the .c is just #included.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@155 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -104,6 +104,7 @@ freeglut/freeglut/src/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_window.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglutdll.def svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/mwmborder.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/templates/header_template svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/stamp-h svn_keywords=Author+Date+Id+Revision
