--- a/.gitattributes
+++ b/.gitattributes
@@ -51,6 +51,7 @@ freeglut/freeglut/progs/demos/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/demos.dsw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
