Added --disable-replace-glut option to autoconf configure.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@236 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -31,6 +31,7 @@ freeglut/freeglut/freeglutstatic.dsw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/include/GL/freeglut_std.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/install-sh svn_keywords=Author+Date+Id+Revision
