--- a/.gitattributes
+++ b/.gitattributes
@@ -34,6 +34,8 @@ freeglut/freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/install-sh svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/mkinstalldirs svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/CallbackMaker/CallbackMaker.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/CallbackMaker/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals/Fractals.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Fractals/fractals.c svn_keywords=Author+Date+Id+Revision
