Added a new demo (from Nigel) showing some of the basic GLUT geometry shapes.  "shapes" is the name of the demo.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@365 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -53,6 +53,8 @@ freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/demos.dsw svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/shapes/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
