--- a/.gitattributes
+++ b/.gitattributes
@@ -53,6 +53,8 @@ freeglut/freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revisi
 freeglut/freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/demos.dsw svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/shapes/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
