First try of getting the web page to work via CVS.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@400 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -85,3 +85,6 @@ freeglut/src/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/src/templates/header_template svn_keywords=Author+Date+Id+Revision
 freeglut/stamp-h svn_keywords=Author+Date+Id+Revision
 freeglut/stamp-h.in svn_keywords=Author+Date+Id+Revision
+web-src/freeglut-style.css svn_keywords=Author+Date+Id+Revision
+web-src/index.php svn_keywords=Author+Date+Id+Revision
+web-src/template.php svn_keywords=Author+Date+Id+Revision
