Added freshmeat and openl links to navigation panel
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@440 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -96,6 +96,8 @@ freeglut/web-src/images/chessdemo.png svneol=native#unset svn_keywords=Author+Da
 freeglut/web-src/images/freeglut_logo.png svneol=native#unset svn_keywords=Author+Date+Id+Revision
 freeglut/web-src/images/freeglut_logo.xcf svneol=native#unset svn_keywords=Author+Date+Id+Revision
 freeglut/web-src/images/freeglut_text.xcf svneol=native#unset svn_keywords=Author+Date+Id+Revision
+freeglut/web-src/images/freshmeat.png -text
+freeglut/web-src/images/opengl.png -text
 freeglut/web-src/images/tuxcake.png svneol=native#unset svn_keywords=Author+Date+Id+Revision
 freeglut/web-src/index.php svn_keywords=Author+Date+Id+Revision
 freeglut/web-src/news.php svn_keywords=Author+Date+Id+Revision
