--- a/.gitattributes
+++ b/.gitattributes
@@ -53,6 +53,8 @@ freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/demos.dsw svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/offscreen/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/offscreen/offscreen.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.dsp svn_keywords=Author+Date+Id+Revision
