--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,8 @@ freeglut/freeglut.dsw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.kdevelop svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.kdevprj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut_evc4.vcp svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut_evc4.vcw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_static.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
