John Fay: These files implement the teapot for WINCE.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@499 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -80,6 +80,7 @@ freeglut/freeglut/src/freeglut_stroke_mono_roman.c svn_keywords=Author+Date+Id+R
 freeglut/freeglut/src/freeglut_stroke_roman.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_structure.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_teapot_data.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_window.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglutdll.def svn_keywords=Author+Date+Id+Revision
