--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+freeglut/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/AUTHORS svn_keywords=Author+Date+Id+Revision
 freeglut/COPYING svn_keywords=Author+Date+Id+Revision
 freeglut/ChangeLog svn_keywords=Author+Date+Id+Revision
@@ -10,6 +11,7 @@ freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/acconfig.h svn_keywords=Author+Date+Id+Revision
 freeglut/autogen.sh svn_keywords=Author+Date+Id+Revision
 freeglut/configure.in svn_keywords=Author+Date+Id+Revision
+freeglut/doc/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/doc/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/freeglut.html svn_keywords=Author+Date+Id+Revision
@@ -27,6 +29,8 @@ freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_evc4.vcp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_evc4.vcw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_static.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/include/.cvsignore svn_keywords=Author+Date+Id+Revision
+freeglut/include/GL/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
@@ -35,29 +39,38 @@ freeglut/include/GL/glut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/install-sh svn_keywords=Author+Date+Id+Revision
 freeglut/mkinstalldirs svn_keywords=Author+Date+Id+Revision
+freeglut/progs/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/.cvsignore svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/CallbackMaker/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/CallbackMaker/CallbackMaker.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/CallbackMaker/CallbackMaker.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/CallbackMaker/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/Fractals.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/fractals.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/fractals.dat svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals_random/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/Fractals_random.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Lorenz/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/One/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/demos.dsw svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/shapes/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/src/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
