Ignore distribution tar files
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@532 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ freeglut/config.sub
 freeglut/configure
 freeglut/doc/Makefile
 freeglut/doc/Makefile.in
+freeglut/freeglut-*.tar.gz
 freeglut/include/GL/Makefile
 freeglut/include/GL/Makefile.in
 freeglut/include/Makefile
