--- a/.gitattributes
+++ b/.gitattributes
@@ -10,7 +10,7 @@ freeglut/README svn_keywords=Author+Date+Id+Revision
 freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/acconfig.h svn_keywords=Author+Date+Id+Revision
 freeglut/autogen.sh svn_keywords=Author+Date+Id+Revision
-freeglut/configure.in svn_keywords=Author+Date+Id+Revision
+freeglut/configure.ac svn_keywords=Author+Date+Id+Revision
 freeglut/doc/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/doc/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
