--- a/.gitattributes
+++ b/.gitattributes
@@ -10,7 +10,7 @@ freeglut/freeglut/README svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/acconfig.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/autogen.sh svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut/configure.in svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/configure.ac svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/doc/download.html svn_keywords=Author+Date+Id+Revision
