--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ freeglut/freeglut/Makefile
 freeglut/freeglut/Makefile.in
 freeglut/freeglut/aclocal.m4
 freeglut/freeglut/autom4te.cache
+freeglut/freeglut/autoscan.log
 freeglut/freeglut/config.guess
 freeglut/freeglut/config.h
 freeglut/freeglut/config.h.in
@@ -9,6 +10,7 @@ freeglut/freeglut/config.log
 freeglut/freeglut/config.status
 freeglut/freeglut/config.sub
 freeglut/freeglut/configure
+freeglut/freeglut/configure.scan
 freeglut/freeglut/doc/Makefile
 freeglut/freeglut/doc/Makefile.in
 freeglut/freeglut/freeglut-*.tar.gz
