Ignore files generated by autoscan.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@536 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ freeglut/Makefile
 freeglut/Makefile.in
 freeglut/aclocal.m4
 freeglut/autom4te.cache
+freeglut/autoscan.log
 freeglut/config.guess
 freeglut/config.h
 freeglut/config.h.in
@@ -9,6 +10,7 @@ freeglut/config.log
 freeglut/config.status
 freeglut/config.sub
 freeglut/configure
+freeglut/configure.scan
 freeglut/doc/Makefile
 freeglut/doc/Makefile.in
 freeglut/freeglut-*.tar.gz
