Adding \"LISEZ-MOI\", the French version of \"README\"
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@581 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@ freeglut/AUTHORS svn_keywords=Author+Date+Id+Revision
 freeglut/COPYING svn_keywords=Author+Date+Id+Revision
 freeglut/ChangeLog svn_keywords=Author+Date+Id+Revision
 freeglut/INSTALL svn_keywords=Author+Date+Id+Revision
+freeglut/LISEZ_MOI svn_keywords=Author+Date+Id+Revision
 freeglut/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/NEWS svn_keywords=Author+Date+Id+Revision
 freeglut/README svn_keywords=Author+Date+Id+Revision
