Adding a \"README.Win32\" file with instructions on how to install \"freeglut\" under Windows.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@588 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@ freeglut/LISEZ_MOI svn_keywords=Author+Date+Id+Revision
 freeglut/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/NEWS svn_keywords=Author+Date+Id+Revision
 freeglut/README svn_keywords=Author+Date+Id+Revision
+freeglut/README.win32 svn_keywords=Author+Date+Id+Revision
 freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/autogen.sh svn_keywords=Author+Date+Id+Revision
 freeglut/configure.ac svn_keywords=Author+Date+Id+Revision
