--- a/.gitattributes
+++ b/.gitattributes
@@ -84,6 +84,7 @@ freeglut/src/freeglut_gamemode.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_geometry.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_glutfont_definitions.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_init.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/freeglut_input_devices.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_internal.h svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_joystick.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_main.c svn_keywords=Author+Date+Id+Revision
