Adding separate demo program projects for static library and DLL versions
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@641 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -47,6 +47,7 @@ freeglut/progs/demos/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/CallbackMaker/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/CallbackMaker/CallbackMaker.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/CallbackMaker/CallbackMaker.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/CallbackMaker/CallbackMakerStatic.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/CallbackMaker/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/Fractals.dsp svn_keywords=Author+Date+Id+Revision
