--- a/.gitattributes
+++ b/.gitattributes
@@ -51,11 +51,13 @@ freeglut/progs/demos/CallbackMaker/CallbackMakerStatic.dsp svn_keywords=Author+D
 freeglut/progs/demos/CallbackMaker/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/Fractals.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals/FractalsStatic.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/fractals.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/Fractals_random.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals_random/Fractals_randomStatic.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
@@ -63,16 +65,19 @@ freeglut/progs/demos/Lorenz/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Lorenz/lorenzStatic.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/One/oneStatic.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/demos.dsw svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/shapes/shapesStatic.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/src/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
