Ignore files generated during RPM build.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@645 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ freeglut/config.status
 freeglut/config.sub
 freeglut/configure
 freeglut/configure.scan
+freeglut/debugfiles.list
+freeglut/debugsources.list
 freeglut/doc/Makefile
 freeglut/doc/Makefile.in
 freeglut/freeglut-*.tar.gz
@@ -20,6 +22,7 @@ freeglut/include/Makefile
 freeglut/include/Makefile.in
 freeglut/libtool
 freeglut/ltmain.sh
+freeglut/man-pages
 freeglut/progs/Makefile
 freeglut/progs/Makefile.in
 freeglut/progs/demos/CallbackMaker/.deps
